<resources>
    <string name="app_name">intership-android-test</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="student">Student</string>
    <string name="user_name">User Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="user_description">User Description</string>
    <string name="add_user">Add User</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name_alphabetical">Sort by name (alphabetical)</string>
    <string name="sort_by_age_youngest_first">Sort by age (youngest first)</string>
    <string name="sort_by_student_status_student_first">Sort by student status (student first)</string>
    <string name="sort_by_description_short_description_first">Sort by description (short description first)</string>
</resources>