<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sortByName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/sort_by_name_alphabetical" />

    <TextView
        android:id="@+id/sortByAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/sort_by_age_youngest_first" />

    <TextView
        android:id="@+id/sortByStudentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/sort_by_student_status_student_first" />

    <TextView
        android:id="@+id/sortByDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/sort_by_description_short_description_first" />

</LinearLayout>