<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp">

    <TextView
        android:id="@+id/itemNameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="40"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/itemAgeView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:textSize="20sp"
        android:text="@string/age"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <Switch
        android:id="@+id/itemIsStudentView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:textSize="20sp"
        android:text="@string/student"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
</LinearLayout>