<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="14dp"
    android:layout_marginStart="14dp"
    android:clickable="true"
    android:focusable="true"
    tools:context=".CustomFragment">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:ems="10"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        style="?android:attr/listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textSize="18sp"
        android:inputType="date"
        android:hint="@string/date_of_birth"
        android:focusable="false"
        android:onClick="showDatePickerDialog"
        style="?android:attr/listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:ems="10"
        android:textSize="18sp"
        android:inputType="text"
        android:hint="@string/user_description"
        style="?android:attr/listSeparatorTextViewStyle"/>


    <Button
        android:id="@+id/add_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Save" />

</LinearLayout>